# adventofcode

./: .gitattributes  .gitignore  download-input.sh
2017/: .gitignore  day1.c  day2.hs  day3.hs  day4.hs  day5.c  day5.hs  day6.hs  day7.hs
2018/: day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
2019/: day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs
2020/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2021/: AoC2021.cabal  Day1.hs  Day2.hs  Day3.hs  cabal.project
2021/app/: Main.hs
2021/lib/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
2022/: AoC2022.cabal  cabal.project
2022/app/: Main.hs
2022/lib/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Utilities.hs
2023/: AoC2023.cabal  cabal.project
2023/app/: Main.hs
2023/lib/: Day01.hs  Day02.hs  Day03.hs
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  main.rs  solver.rs
Utils/: AoCUtils.cabal
Utils/lib/: Utilities.hs
