cabal-version:      2.4
name:               AoC2021
version:            0.1.0.0

author:             Henrik Andersson
maintainer:         h@hnra.dev

executable AoC2021
    main-is:          Main.hs
    build-depends:
        base             >=4.14.3.0,
        Days,
    hs-source-dirs:   app
    default-language: Haskell2010
library Days
    exposed-modules:
        Day01
        Day02
        Day03
    hs-source-dirs:   lib
    build-depends:
        base                    >= 4.14.3 && < 4.17,
        AoCUtils,
        containers              >= 0.6.5 && < 0.7,
        unordered-containers    >= 0.2.19 && < 0.3,
        text                    >= 1.2.4 && < 1.3,
        transformers            >= 0.5.6 && < 0.6,
        pqueue                  >= 1.4.3 && < 1.5,
        attoparsec              >= 0.14.4 && < 0.15,
        hashable                >= 1.4.1 && < 1.5,
        vector                  >= 0.13.0 && < 0.14,
        multiset                >= 0.3.4 && < 0.4,
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        StrictData
