cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0

author:             Henrik Andersson
maintainer:         h@hnra.dev

executable AoC2022
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, Days
    hs-source-dirs:   app
    default-language: Haskell2010
library Days
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
    other-modules: Utilities
    hs-source-dirs:   lib
    build-depends:    base ^>=4.14.3.0, text
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings
