cabal-version:      2.4
name:               AoC2022
version:            0.1.0.0

author:             Henrik Andersson
maintainer:         h@hnra.dev

executable AoC2022
    main-is:          Main.hs
    build-depends:
        base             >=4.14.3.0,
        containers       >= 0.6.5 && < 0.7,
        Days,
    hs-source-dirs:   app
    default-language: Haskell2010
library Days
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
    other-modules: Utilities
    hs-source-dirs:   lib
    build-depends:
        base                    >= 4.14.3 && < 4.17,
        containers              >= 0.6.5 && < 0.7,
        unordered-containers    >= 0.2.19 && < 0.3,
        text                    >= 1.2.4 && < 1.3,
        transformers            >= 0.5.6 && < 0.6,
        pqueue                  >= 1.4.3 && < 1.5,
        attoparsec              >= 0.14.4 && < 0.15,
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        StrictData
