cabal-version:      2.4
name:               AoC2023
version:            0.1.0.0

author:             Henrik Andersson
maintainer:         h@hnra.dev

executable AoC2022
    main-is:          Main.hs
    build-depends:
        base             >=4.14.3.0,
        Days,
    hs-source-dirs:   app
    default-language: Haskell2010
library Days
    exposed-modules:
        Day01
        Day02
        Day03
    hs-source-dirs:   lib
    build-depends:
        base                    >= 4.14.3 && < 4.20,
        AoCUtils,
        containers              >= 0.6.5 && < 0.7,
        unordered-containers    >= 0.2.19 && < 0.3,
        text                    >= 2.0.0 && < 2.2,
        transformers            >= 0.5.6 && < 0.7,
        pqueue                  >= 1.4.3 && < 1.6,
        attoparsec              >= 0.14.4 && < 0.15,
        hashable                >= 1.4.1 && < 1.5,
        vector                  >= 0.13.0 && < 0.14,
        multiset                >= 0.3.4 && < 0.4,
    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        StrictData
    ghc-options:
        -Wno-name-shadowing
        -Wno-x-partial
